MFC r339900: Have gconcat advertise delete support if one of its disks does.

PR:	232676